# city-geo-warehouse

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: BS_SGI_67_WIDEF.csv  FAO_CP_WIDEF.csv  IMF_GFSE_GEOPR_G14_WIDEF.csv  IMF_GHW_WIDEF.csv  README.md  WB_WDI_SH_STA_TRAF_P5_WIDEF.csv  WEF_GCIHH_GCI_B_05_WIDEF.csv  WEF_GCIHH_LIFEEXPECT_WIDEF.csv  __old.md  data_process.ipynb
data/processed/: README.md  country_metrics.csv
data/raw/: BS_SGI_10_WIDEF.csv  IMF_COFOG_GERS_GF0801_WIDEF.csv  OECD_IDD_EAR_METH2012_WIDEF.csv  README.md  WB_ESG_AG_LND_FRST_ZS_WIDEF.csv  WEF_TTDI_TTDI_D_13_WIDEF.csv
docker/: Dockerfile  init.sql
notebooks/: city_data_etl.ipynb  country_metrics_overview.ipynb
notebooks/.ipynb_checkpoints/: city_data_etl-checkpoint.ipynb
scripts/: bing_search.py  extract_next.py  inspect_next_data.py  load_country_metrics.py  peek_datasets.py  process_country_metrics.py  search_rapidapi.py  test_apis.py  tmp.py
src/config/: api_config.py  database.py
src/models/: city_data.py  city_data_collector.py  city_etl.py  country_data.py  country_etl.py  natural_features.py
src/utils/: validators.py
