[project]
name = "city-geo-warehouse"
version = "0.1.0"
description = "Country-level data warehouse pipeline"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.15,<1",
    "geopandas>=0.14,<1",
    "haversine>=2.8,<3",
    "osmnx>=1.9,<2",
    "pandas>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "pyowm>=3.3,<4",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "shapely>=2.0,<3",
    "SQLAlchemy>=2.0,<3",
]
